Update Impact of Ethiopian Flight 302 Crash on Boeing Stock.ipynb
Updated

--- a/Impact of Ethiopian Flight 302 Crash on Boeing Stock.ipynb
+++ b/Impact of Ethiopian Flight 302 Crash on Boeing Stock.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "971257c6",
+   "metadata": {},
+   "source": [
+    "### Import Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "10f92e81",
@@ -24,19 +32,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "535af249",
+   "metadata": {},
+   "source": [
+    "### Define Dates"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "3e457bfd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Define Dates\n",
+    "#Define Dates. \n",
+    "#Flight 302 crashed on March 10, 2019 on a weekend. We are evaluating how that impacted stock price from 11th March\n",
     "\n",
     "training_start = \"2018-12-03\"\n",
     "training_end = \"2019-03-08\"\n",
     "treatment_start = \"2019-03-11\"\n",
     "treatment_end = \"2019-03-20\"\n",
     "end_stock = \"2019-03-21\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00d3c4b6",
+   "metadata": {},
+   "source": [
+    "### Download Stock Data from Yahoo Finance"
    ]
   },
   {
@@ -79,6 +104,14 @@
     "                interval = \"1d\")\n",
     "y = y['Adj Close'].rename(\"y\")\n",
     "y[:5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a1d0a5e",
+   "metadata": {},
+   "source": [
+    "### Additional Stocks will be our Covariates or Control Group"
    ]
   },
   {
@@ -357,6 +390,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "394750af",
+   "metadata": {},
+   "source": [
+    "### Combine all stocks into one DataFrame "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "id": "aff3730e",
@@ -584,7 +625,7 @@
     }
    ],
    "source": [
-    "#Removing unneded level\n",
+    "#Removing One level\n",
     "\n",
     "X.columns = X.columns.droplevel()\n",
     "X.head(1)"
@@ -895,6 +936,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "daff5e68",
+   "metadata": {},
+   "source": [
+    "### Test Data for Stationarity"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "9c11e0b4",
@@ -926,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "id": "6337a0ac",
    "metadata": {},
    "outputs": [
@@ -1064,13 +1113,13 @@
        "2018-12-11  0.005491 -0.025245 -0.015147  0.026730  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Differencing\n",
+    "#Differencing: Transform data to improve correlation\n",
     "\n",
     "differencing = df_training.pct_change().dropna()\n",
     "differencing.head()"
@@ -1102,6 +1151,14 @@
     "  print(\"The Time Series is stationary\")\n",
     "else:\n",
     "  print(\"The Time Series is not stationary\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00f928f9",
+   "metadata": {},
+   "source": [
+    "### Pick stocks that are correlated"
    ]
   },
   {
@@ -1143,6 +1200,14 @@
     "            fmt = '.1g',\n",
     "            linewidths = 1,\n",
     "            linecolor = 'white')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6dbf2d99",
+   "metadata": {},
+   "source": [
+    "### Drop Stocks that are not Correlated "
    ]
   },
   {
@@ -1266,6 +1331,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f9423263",
+   "metadata": {},
+   "source": [
+    "### Run Google Causal Impact"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "id": "573dd79b",
@@ -1320,6 +1393,14 @@
     "                      pre_period = pre_period,\n",
     "                      post_period = post_period)\n",
     "impact.plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d0b84f0",
+   "metadata": {},
+   "source": [
+    "### Summary"
    ]
   },
   {
@@ -1417,7 +1498,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb0ca696",
+   "id": "554239e7",
    "metadata": {},
    "outputs": [],
    "source": []
